# APEX-API

./: .gitignore  Cargo.toml  readme.md  sample.env
src/: error.rs  lib.rs
src/client/: cache.rs  http.rs  mod.rs  url.rs
src/models/: map.rs  mod.rs  predator.rs  serverstatus.rs
src/types/: legends.rs  mod.rs  platform.rs
tests/: general.rs  http.rs
