[package]
authors = ["Ennui.lw"]
name = "apex-api"
version = "0.1.0"
edition = "2024"

[features]
env = []
cache = []
default = ["env", "cache"]


[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
itertools = "0.14.0"
once_cell = "1.21.3"
regex = "1.11.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
thiserror = "^2.0.17"
tokio = { version = "1.47.1", features = ["full"] }

[dependencies.reqwest]
version = "0.12.23"
features = ["json"]


[[test]]
name = "general"
path = "tests/general.rs"

[[test]]
name = "http"
path = "tests/http.rs"
